[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "authors"
authors = [
    {name = "João Faria", email = "joao.faria@unige.ch"},
]
description = "Authors of your next scientific article"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["RV", "exoplanets"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pyaml",
    "pyperclip",
]

[project.scripts]
update-author-name = "authors.cli:cli_update_author_name"
update-author-email = "authors.cli:cli_update_author_email"
update-author-orcid = "authors.cli:cli_update_author_orcid"
delete-author = "authors.cli:cli_delete_author"
authors = "authors.cli:cli_authors"


[project.urls]
Repository = "https://github.com/j-faria/authors"

[tool.setuptools]
packages = ['authors']

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm
local_scheme = "no-local-version"
